Fix z-index issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,14 @@ main {
   overscroll-behavior: none;
 }
 
+/* Setting the z-index of the drawer content seems to break its touch responsiveness, so I'm instead setting the z-index of the map controls to 0 */
+.maplibregl-ctrl-bottom-left,
+.maplibregl-ctrl-bottom-right,
+.maplibregl-ctrl-top-left,
+.maplibregl-ctrl-top-right {
+  z-index: 0 !important;
+}
+
 /* From Supabase Next starter */
 /* @tailwind base;
 @tailwind components;
